@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - fix test on older operating systems that define EAGAIN and
+            EWOULDBLOCK as different values in errno.h
 
 0.09      2014-08-30 17:07:04Z
           - bump prereq on namespace::clean (RT#65244) and IO::File (RT#68873)
